stack.yaml
Description: Launches a pair of servers for learning Puppet on

# All configuration that the user will probably want to adjust
Parameters:

  # Instance type option (has default t2.micro)
  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    Description: Only t2.micro supported.

  # KeyName is the SSH public key to setup for the root account (required)
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: You must supply the keyname to use.

  # VpcId must be supplied - we don't launch a VPC as part of this stack, we
  # expect something to be supplied.
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: You must supply a VPC ID

  # SubnetID must be supplied.
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet to use for the EC2 compute


# Mappings. These generally shouldn't need adjustment by user, but may need
# to be updated to reflect different regions/environments.
Mappings:
  AMI:
    ap-southeast-2:
      "AMI": ami-0bc1f168

# AWS Components
Resources:

  # We setup a single security group that allows connectivity between the
  # Puppet master and Puppet client servers, as well as SSH in from the network.
  Ec2SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Puppet Training Compute Group"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # Management of server
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"

        # Puppet Processes
        # TODO: Change to be self referencing ingress rule.
        - IpProtocol: tcp
          FromPort: 8140
          ToPort: 8140
          CidrIp: "0.0.0.0/0"

        # Allow HTTP for testing webapp build training
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"


  # We need a Puppet Master EC2 instance
  PuppetMaster:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap [AMI, !Ref "AWS::Region", AMI]
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !Ref Ec2SecurityGroup
      Tags:
        - Key: "Name"
          Value: !Join [ " ", [ !Ref "AWS::StackName", "Master" ] ]
